service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 400
      targetPort: 4000
  selector:
    app: myapp

# create service
# kubectl create -f service.yml
